# dailyme

./: .dockerignore  .env.example  .env.openhands.example  .gitignore  .vercelignore  AGENTS.md  Dockerfile  OPENHANDS_CLOUD_SETUP.md  OPENHANDS_SHOWCASE.md  PROJECT_PLAN.md  Procfile  README.md  TROUBLESHOOTING.md  VERCEL_DEPLOYMENT.md  alembic.ini  pyproject.toml  reprocess_email.py  requirements.txt  vercel.json
.agents/skills/automation/: CUSTOM.md  README.md  SKILL.md
.agents/skills/dedup-strategy/: SKILL.md
.agents/skills/newsletter-parser/: SKILL.md
.agents/skills/pipeline-runner/: SKILL.md
.github/workflows/: openhands-env-setup.sh  pipeline.yml  social_pipeline.yml
api/: index.py
app/: config.py  db.py  main.py  models.py  schemas.py
app/delivery/: digest.py
app/ingestion/: gmail.py  parser.py
app/processing/: clustering.py  dedup.py  llm_extract.py  ranker.py  segmenter.py  substack.py  tagger.py  web_version.py
app/static/: style.css
app/templates/: base.html  feed.html
migrations/: env.py
scripts/: check_automations.py  debug_newsletter.py  openhands_trigger.py  openhands_trigger_social.py  run_pipeline.py  run_social_pipeline.py  scheduler.py  setup_db.py
tests/: test_clustering.py  test_dedup.py  test_llm_extract.py  test_rss.py  test_segmenter.py  test_social_pipeline.py
